[metadata]
name = linpipe
version = 0.0.0.1
description = LinPipe: Multilingual Processing Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ufal.mff.cuni.cz/linpipe
author = Milan Straka
author_email = straka@ufal.mff.cuni.cz
license = MPL-2.0
classifiers =
  Development Status :: 1 - Planning
  License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
  Programming Language :: C++
  Programming Language :: Python
project_urls =
  Homepage = https://ufal.mff.cuni.cz/linpipe
  Repository = https://github.com/ufal/linpipe
